src/tests/routes/users/snapshots/crates_io__tests__routes__users__admin__lock__admin-malformed-json.snap
---
source: src/tests/routes/users/admin.rs
expression: response.text()
---
{"errors":[{"detail":"Failed to deserialize the JSON body into the target type: missing field `reason` at line 1 column 17"}]}
