src/tests/routes/users/snapshots/crates_io__tests__routes__users__admin__lock__admin-not-found.snap
---
source: src/tests/routes/users/admin.rs
expression: response.text()
---
{"errors":[{"detail":"Not Found"}]}
