src/tests/routes/users/snapshots/crates_io__tests__routes__users__admin__lock__admin-relock-shorter.snap
---
source: src/tests/routes/users/admin.rs
expression: response.json()
---
{
  "avatar": null,
  "email": "foo@example.com",
  "email_verification_sent": true,
  "email_verified": true,
  "id": 1,
  "is_admin": false,
  "lock": {
    "reason": "less l33t",
    "until": "2035-01-01T01:02:03+00:00"
  },
  "login": "foo",
  "name": null,
  "publish_notifications": true,
  "url": "https://github.com/foo"
}
